- added capicommand(keypad)
- added log of FACILITY_IND for call deflect suplementary service
- malloc,strdup,free -> ast_(malloc,strdup,free)
- Use Diva streaming for NULL PLCI and for resource PLCI
- Resolved http://www.ipphoneforum.eu/showthread.php?t=220051
- Use Diva QSIG CAPI extensions for processing of Calling Party Name

chan_capi-1.1.5
------------------
- corrected check for Info value on CONNECT_B3_CONF
- fixed NULL-pointer in cid_name (asterisk 1.6 pickup revealed this)
- changed action on prodding in .write function to ignore it
- API adaptions to new asterisk trunk

chan_capi-1.1.4
------------------
- use extended fax if available only and have fine resolution on receive activated by default
- fixed chat error on creating third chat-room

chan_capi-1.1.3
------------------
- fixed buffer length error with internal libcapi debug code.
- performance optimizations, use debug code when needed only.
- added commands for media features supported by Dialogic(R) Diva(R) Media Boards
- added variable CAPI_CIP for full access to all bearer capabilities.
- fixed CAPI 'chat' for using more than 8 controllers.
- fixed CAPI 'chat' for not exceeding maximal size of CAPI message
- add color fax
- add autodetection of fax file format for sendfax command (SFF, CFF JPEG, CFF T.43, TEXT)
- add extension for FAX paper formats and resolutions
- adjust NULL PLCI LI path
- add resource PLCI
- add echocancelpath configuration option
- fixed possible race condition while waiting for DISCONNECT_CONF
- add static half duplex conference
- add dynamic half duplex conference
- add clear channel fax
- add DTMF detection for NULL PLCI
- use direct access to vocoders without RTP framing
- play message to conference and music on hold to caller
- add commands to remove users from chat
- allow to specity the 'ETS 300 102-1' called party number octet 3
- fixed possible buffer overflow in 'deflect'
- added 'h' option to chat to auto-hangup caller if alone in conference too long

